Post zoom meeting notebook

--- a/master_report.ipynb
+++ b/master_report.ipynb
@@ -28,20 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Structural and ML Imports\n",
+    "# General tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# from sklearn import everything\n",
     "\n",
     "# Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from IPython.display import display\n",
-    "pd.options.display.max_columns = None"
+    "pd.options.display.max_columns = None\n",
+    "\n",
+    "# Classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -53,11 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 261,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9557, 143)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1115,13 +1125,14 @@
        "4         1.777778            1.0      121.0   1369       4  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('train.csv')\n",
+    "print(df.shape)\n",
     "df.head()"
    ]
   },
@@ -1451,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1471,7 @@
        "Text(0.5, 1.0, 'Poverty Level Counts')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1499,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1519,7 @@
        "2988"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1546,7 @@
        "2973"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,16 +1564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5574a44be0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f50be2fa128>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1596,6 +1607,149 @@
     "r4t3 | total ppl in house | tamviv\n",
     "tamhog | household size | hhsize\n",
     "escolari | yrs of school\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Full Model (Linear Regression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9557, 132)\n",
+      "(9557,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Partition explanatory and response variables\n",
+    "X = df.drop(columns=['edjefe', 'edjefa', 'dependency', 'v2a1', 'v18q1', 'rez_esc', 'meaneduc', 'SQBmeaned'])\n",
+    "X = X.drop(columns=['Target', 'Id', 'idhogar'])\n",
+    "print(X.shape)\n",
+    "\n",
+    "y = df['Target']\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.321652719665272"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = clf.predict(X_test)\n",
+    "y_pred = X_pred.round()\n",
+    "y_pred = X_pred.astype(int)\n",
+    "\n",
+    "df_test = pd.DataFrame([y_pred, y_test], index=['ypred', 'ytest'])\n",
+    "df_test = df_test.transpose()\n",
+    "df_test['correct'] = df_test['ypred'] == df_test['ytest']\n",
+    "df_test.correct.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nemosaic/.local/lib/python3.6/site-packages/sklearn/metrics/classification.py:1145: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.15940323758582878"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, y_pred, average='macro')"
    ]
   }
  ],
