Updated rent prediction model.

--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "import seaborn as sns\n",
     "from IPython.display import display\n",
     "pd.options.display.max_columns = None\n",
+    "from pprint import pprint\n",
     "\n",
     "# Classification\n",
     "from sklearn.metrics import f1_score, confusion_matrix\n",
@@ -53,9 +54,7 @@
     "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.neighbors import NearestNeighbors, KNeighborsClassifier\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import xgboost as xgb\n",
     "from sklearn.feature_selection import SelectFromModel"
    ]
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +155,18 @@
     "    \n",
     "    #_______________________________\n",
     "    # CLASSIFICATION \n",
-    "    # (using xgboost because it consistently gave highest score)\n",
+    "    # (using random forest because it consistently gave highest score)\n",
     "    #_______________________________\n",
     "    \n",
-    "    # Setup classifier\n",
-    "    clf_xgb = xgb.XGBClassifier(max_depth=6,n_estimators=100, n_jobs=-1, subsample=.7)\n",
+    "    # XGB\n",
+    "    # clf = xgb.XGBClassifier(max_depth=6,n_estimators=100, n_jobs=-1, subsample=.7)\n",
+    "    # clf.fit(X_train, y_train)\n",
+    "    # print(clf.score(X_test, y_test))\n",
     "    \n",
-    "    # Fit model\n",
-    "    clf_xgb.fit(X_train, y_train)\n",
+    "    # Random Forest\n",
+    "    clf = RandomForestRegressor()\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    # print(clf.score(X_test, y_test))\n",
     "    \n",
     "    \n",
     "    #_______________________________\n",
@@ -174,7 +177,7 @@
     "    df_rent_nan = df_rent[df_rent.v2a1.isna()]\n",
     "    \n",
     "    # Predict using model\n",
-    "    rent_pred = clf_xgb.predict(df_rent_nan.drop(columns='v2a1'))\n",
+    "    rent_pred = clf.predict(df_rent_nan.drop(columns='v2a1'))\n",
     "    \n",
     "    # Fill NaN\n",
     "    df_rent_nan['v2a1'] = pd.DataFrame(rent_pred).values\n",
@@ -188,14 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:50: SettingWithCopyWarning: \n",
+      "/home/nemosaic/.local/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -209,11 +214,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_rent.to_pickle(\"df_rent.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['meaneduc',\n",
+       " 'v2a1',\n",
+       " 'SQBedjefe',\n",
+       " 'overcrowding',\n",
+       " 'SQBdependency',\n",
+       " 'age',\n",
+       " 'rooms',\n",
+       " 'qmobilephone',\n",
+       " 'SQ_meaneduc',\n",
+       " 'SQ_v2a1',\n",
+       " 'SQ_SQBedjefe',\n",
+       " 'SQ_overcrowding',\n",
+       " 'SQ_SQBdependency',\n",
+       " 'SQ_age',\n",
+       " 'SQ_rooms',\n",
+       " 'SQ_qmobilephone',\n",
+       " 'LOG_meaneduc',\n",
+       " 'LOG_v2a1',\n",
+       " 'LOG_SQBedjefe',\n",
+       " 'LOG_overcrowding',\n",
+       " 'LOG_SQBdependency',\n",
+       " 'LOG_age',\n",
+       " 'LOG_rooms',\n",
+       " 'LOG_qmobilephone']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_features = ['meaneduc', 'v2a1', 'SQBedjefe', 'overcrowding', 'SQBdependency', 'age', 'rooms', 'qmobilephone']\n",
+    "top_features_SQ = [\"SQ_\" + i for i in top_features]\n",
+    "top_features_LOG = [\"LOG_\" + i for i in top_features]\n",
+    "\n",
+    "top_features + top_features_SQ + top_features_LOG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Selection Map\n",
+    "\n",
+    "ID | Original | Squares | Logs\n",
+    "--- | --- | --- | --- \n",
+    "1 | X | - | -\n",
+    "2 | - | X | -\n",
+    "3 | - | - | X\n",
+    "4 | X | X | -\n",
+    "5 | X | - | X\n",
+    "6 | - | X | X"
    ]
   }
  ],
