--- a/03_Classification.ipynb
+++ b/03_Classification.ipynb
@@ -45,6 +45,7 @@
     "import seaborn as sns\n",
     "from IPython.display import display\n",
     "pd.options.display.max_columns = None\n",
+    "from pprint import pprint\n",
     "\n",
     "# Classification\n",
     "from sklearn.metrics import f1_score, confusion_matrix\n",
@@ -53,9 +54,7 @@
     "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.neighbors import NearestNeighbors, KNeighborsClassifier\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import xgboost as xgb\n",
     "from sklearn.feature_selection import SelectFromModel"
    ]
