--- a/04_Hyperparameter_Tuning.ipynb
+++ b/04_Hyperparameter_Tuning.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "import seaborn as sns\n",
     "from IPython.display import display\n",
     "pd.options.display.max_columns = None\n",
+    "from pprint import pprint\n",
     "\n",
     "# Classification\n",
     "from sklearn.metrics import f1_score, confusion_matrix\n",
@@ -53,74 +54,9 @@
     "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.neighbors import NearestNeighbors, KNeighborsClassifier\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import xgboost as xgb\n",
     "from sklearn.feature_selection import SelectFromModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['meaneduc',\n",
-       " 'v2a1',\n",
-       " 'SQBedjefe',\n",
-       " 'overcrowding',\n",
-       " 'SQBdependency',\n",
-       " 'age',\n",
-       " 'rooms',\n",
-       " 'qmobilephone',\n",
-       " 'SQ_meaneduc',\n",
-       " 'SQ_v2a1',\n",
-       " 'SQ_SQBedjefe',\n",
-       " 'SQ_overcrowding',\n",
-       " 'SQ_SQBdependency',\n",
-       " 'SQ_age',\n",
-       " 'SQ_rooms',\n",
-       " 'SQ_qmobilephone',\n",
-       " 'LOG_meaneduc',\n",
-       " 'LOG_v2a1',\n",
-       " 'LOG_SQBedjefe',\n",
-       " 'LOG_overcrowding',\n",
-       " 'LOG_SQBdependency',\n",
-       " 'LOG_age',\n",
-       " 'LOG_rooms',\n",
-       " 'LOG_qmobilephone']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_features = ['meaneduc', 'v2a1', 'SQBedjefe', 'overcrowding', 'SQBdependency', 'age', 'rooms', 'qmobilephone']\n",
-    "top_features_SQ = [\"SQ_\" + i for i in top_features]\n",
-    "top_features_LOG = [\"LOG_\" + i for i in top_features]\n",
-    "\n",
-    "top_features + top_features_SQ + top_features_LOG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Feature Selection Map\n",
-    "\n",
-    "ID | Original | Squares | Logs\n",
-    "--- | --- | --- | --- \n",
-    "1 | X | - | -\n",
-    "2 | - | X | -\n",
-    "3 | - | - | X\n",
-    "4 | X | X | -\n",
-    "5 | X | - | X\n",
-    "6 | - | X | X"
    ]
   }
  ],
