--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,66 +229,274 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will take random subsets of the top 8 variables, along with their square and log transformations and see if any result in better scoring. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting up list of variable names including untransformed, squares, and logs\n",
+    "top_features = ['v2a1', 'meaneduc', 'SQBedjefe', 'overcrowding', 'SQBdependency', 'age', 'rooms', 'qmobilephone']\n",
+    "top_features_SQ = [\"SQ_\" + i for i in top_features]\n",
+    "top_features_LOG = [\"LOG_\" + i for i in top_features]\n",
+    "\n",
+    "top_features_master = top_features + top_features_SQ + top_features_LOG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently running best_subset simulations of sample size:\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['meaneduc',\n",
-       " 'v2a1',\n",
-       " 'SQBedjefe',\n",
-       " 'overcrowding',\n",
-       " 'SQBdependency',\n",
-       " 'age',\n",
-       " 'rooms',\n",
-       " 'qmobilephone',\n",
-       " 'SQ_meaneduc',\n",
-       " 'SQ_v2a1',\n",
-       " 'SQ_SQBedjefe',\n",
-       " 'SQ_overcrowding',\n",
-       " 'SQ_SQBdependency',\n",
-       " 'SQ_age',\n",
-       " 'SQ_rooms',\n",
-       " 'SQ_qmobilephone',\n",
-       " 'LOG_meaneduc',\n",
-       " 'LOG_v2a1',\n",
-       " 'LOG_SQBedjefe',\n",
-       " 'LOG_overcrowding',\n",
-       " 'LOG_SQBdependency',\n",
-       " 'LOG_age',\n",
-       " 'LOG_rooms',\n",
-       " 'LOG_qmobilephone']"
+       "[['age',\n",
+       "  'LOG_SQBedjefe',\n",
+       "  'LOG_age',\n",
+       "  'LOG_v2a1',\n",
+       "  'qmobilephone',\n",
+       "  'SQ_age',\n",
+       "  'LOG_SQBdependency',\n",
+       "  'LOG_rooms',\n",
+       "  'SQ_SQBedjefe',\n",
+       "  'meaneduc',\n",
+       "  'SQ_rooms',\n",
+       "  'SQ_qmobilephone',\n",
+       "  'LOG_overcrowding',\n",
+       "  'overcrowding',\n",
+       "  'SQ_meaneduc',\n",
+       "  'SQ_SQBdependency',\n",
+       "  'SQBedjefe',\n",
+       "  'SQBdependency',\n",
+       "  'LOG_meaneduc'],\n",
+       " 19,\n",
+       " 0.9095188284518828,\n",
+       " 0.8669314133330484]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_features = ['meaneduc', 'v2a1', 'SQBedjefe', 'overcrowding', 'SQBdependency', 'age', 'rooms', 'qmobilephone']\n",
-    "top_features_SQ = [\"SQ_\" + i for i in top_features]\n",
-    "top_features_LOG = [\"LOG_\" + i for i in top_features]\n",
+    "# Taking random subsets of varying sizes and running classifier to determine best subset\n",
+    "import random\n",
+    "random.seed(12345)\n",
     "\n",
-    "top_features + top_features_SQ + top_features_LOG"
+    "best_subset = None\n",
+    "\n",
+    "# Iterate to find best feature subset and subset size\n",
+    "print(\"Currently running best_subset simulations of sample size:\")\n",
+    "for size in range(8, 21):\n",
+    "    print(size)\n",
+    "    for run in range(10): # Scale up to 100, 1000, 10000, etc depending on computational power\n",
+    "        \n",
+    "        # Make copy of dataframe and remove original top 8 features\n",
+    "        df_test = df_rent.copy(deep=True)\n",
+    "        df_test.drop(columns=top_features, inplace=True)\n",
+    "        \n",
+    "        # Randomly sample subset without replacement\n",
+    "        subset = random.sample(top_features_master, size)\n",
+    "        \n",
+    "        # Add columns to dataframe\n",
+    "        for feature in subset:\n",
+    "            if \"SQ_\" in feature:\n",
+    "                col = feature.split(\"SQ_\")[1]\n",
+    "                df_test[col] = df_rent[col] ** 2\n",
+    "                \n",
+    "            elif \"LOG_\" in feature:\n",
+    "                col = feature.split(\"LOG_\")[1]\n",
+    "                df_test[col] = df_rent[col].apply(lambda x: np.log(x) if x!=0 else x)\n",
+    "                \n",
+    "            else:\n",
+    "                col = feature\n",
+    "                df_test[col] = df_rent[col]\n",
+    "            \n",
+    "        # Run model in Random Forest\n",
+    "        X = df_test.drop(columns='Target')\n",
+    "        y = df_test['Target']\n",
+    "        \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify=y, random_state=12345)\n",
+    "        \n",
+    "        clf_RF = RandomForestClassifier(n_estimators=10)\n",
+    "        clf_RF.fit(X_train, y_train)\n",
+    "        \n",
+    "        score = clf_RF.score(X_test, y_test)\n",
+    "        y_pred = clf_RF.predict(X_test)\n",
+    "        f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "        \n",
+    "        if best_subset:\n",
+    "            if f1 > best_subset[3]:\n",
+    "                best_subset = [subset, size, score, f1]\n",
+    "        else:\n",
+    "            best_subset = [subset, size, score, f1]\n",
+    "        \n",
+    "best_subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TOO COMPUTATIONALLY EXPENSIVE\n",
+    "# # Trying all combinations of varying sizes and running classifier to determine best subset\n",
+    "# from itertools import combinations\n",
+    "\n",
+    "# best_subset = None\n",
+    "\n",
+    "# # Iterate to find best feature subset and subset size\n",
+    "# print(\"Currently running best_subset simulations of sample size:\")\n",
+    "\n",
+    "# for size in range(8, 21):\n",
+    "    \n",
+    "# #     print(size)\n",
+    "    \n",
+    "#     # Combinations to try\n",
+    "#     comb = list(combinations(top_features_master, size))\n",
+    "    \n",
+    "#     for run in range(len(comb)):\n",
+    "    \n",
+    "#         # Status Update\n",
+    "#         if len(comb) % (run+1) == 0:\n",
+    "#             print(f'Size {size}: {(run+1) / len(comb) * 100:.5f}%')\n",
+    "            \n",
+    "#         # Subset\n",
+    "#         subset = comb[run]\n",
+    "        \n",
+    "#         # Make copy of dataframe and remove original top 8 features\n",
+    "#         df_test = df_rent.copy(deep=True)\n",
+    "#         df_test.drop(columns=top_features, inplace=True)\n",
+    "        \n",
+    "#         # Add columns to dataframe\n",
+    "#         for feature in subset:\n",
+    "#             if \"SQ_\" in feature:\n",
+    "#                 col = feature.split(\"SQ_\")[1]\n",
+    "#                 df_test[col] = df_rent[col] ** 2\n",
+    "                \n",
+    "#             elif \"LOG_\" in feature:\n",
+    "#                 col = feature.split(\"LOG_\")[1]\n",
+    "#                 df_test[col] = df_rent[col].apply(lambda x: np.log(x) if x!=0 else x)\n",
+    "                \n",
+    "#             else:\n",
+    "#                 col = feature\n",
+    "#                 df_test[col] = df_rent[col]\n",
+    "            \n",
+    "#         # Run model in Random Forest\n",
+    "#         X = df_test.drop(columns='Target')\n",
+    "#         y = df_test['Target']\n",
+    "        \n",
+    "#         X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify=y, random_state=12345)\n",
+    "        \n",
+    "#         clf_RF = RandomForestClassifier(n_estimators=10)\n",
+    "#         clf_RF.fit(X_train, y_train)\n",
+    "        \n",
+    "#         score = clf_RF.score(X_test, y_test)\n",
+    "#         y_pred = clf_RF.predict(X_test)\n",
+    "#         f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "        \n",
+    "#         if best_subset:\n",
+    "#             if f1 > best_subset[3]:\n",
+    "#                 best_subset = [subset, size, score, f1]\n",
+    "#         else:\n",
+    "#             best_subset = [subset, size, score, f1]\n",
+    "        \n",
+    "# best_subset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Selection Map\n",
+    "## Create New DataFrame for Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "winner = \\\n",
+    "[['SQ_SQBedjefe',\n",
+    "  'LOG_qmobilephone',\n",
+    "  'SQ_v2a1',\n",
+    "  'SQBdependency',\n",
+    "  'SQBedjefe',\n",
+    "  'meaneduc',\n",
+    "  'qmobilephone',\n",
+    "  'rooms',\n",
+    "  'LOG_meaneduc',\n",
+    "  'SQ_qmobilephone',\n",
+    "  'v2a1',\n",
+    "  'SQ_overcrowding',\n",
+    "  'LOG_SQBdependency'],\n",
+    " 13,\n",
+    " 0.9257322175732218,\n",
+    " 0.8887133182436542]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add columns to dataframe\n",
     "\n",
-    "ID | Original | Squares | Logs\n",
-    "--- | --- | --- | --- \n",
-    "1 | X | - | -\n",
-    "2 | - | X | -\n",
-    "3 | - | - | X\n",
-    "4 | X | X | -\n",
-    "5 | X | - | X\n",
-    "6 | - | X | X"
+    "df_trans = df_rent.copy(deep=True)\n",
+    "df_trans.drop(columns=top_features, inplace=True)\n",
+    "\n",
+    "for feature in winner[0]:\n",
+    "    if \"SQ_\" in feature:\n",
+    "        col = feature.split(\"SQ_\")[1]\n",
+    "        df_trans[feature] = df_rent[col] ** 2\n",
+    "\n",
+    "    elif \"LOG_\" in feature:\n",
+    "        col = feature.split(\"LOG_\")[1]\n",
+    "        df_trans[feature] = df_rent[col].apply(lambda x: np.log(x) if x!=0 else x)\n",
+    "\n",
+    "    else:\n",
+    "        col = feature\n",
+    "        df_trans[feature] = df_rent[col]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trans.to_pickle(\"df_trans.pkl\")"
    ]
   }
  ],
