Master update with hyperparameter tuning and kaggle submission script from David.

--- a/01_Exploration_Visualization_Cleaning.ipynb
+++ b/01_Exploration_Visualization_Cleaning.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1122,7 +1122,7 @@
        "4         1.777778            1.0      121.0   1369       4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
        "max        64.000000  1369.000000  9409.000000     4.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2776,7 @@
        "Text(0.5, 1.0, 'Poverty Level Counts')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2824,7 @@
        "2988"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2842,7 +2842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2851,7 +2851,7 @@
        "2973"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2869,16 +2869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7feacb141ba8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f02f1765438>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2916,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
        "['v2a1', 'v18q1', 'rez_esc', 'meaneduc', 'SQBmeaned']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2938,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2978,7 +2978,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3008,7 +3008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3017,7 +3017,7 @@
        "0.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,7 +3040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3049,7 @@
        "0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3119,14 +3119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dataframe_generator(rent=False):\n",
+    "def dataframe_generator(data, rent=False):\n",
     "    \n",
     "    # Load dataframe\n",
-    "    df = pd.read_csv('train.csv')\n",
+    "    df = pd.read_csv(data)\n",
     "    \n",
     "    \n",
     "    #_______________________________\n",
@@ -3190,7 +3190,7 @@
     "    # DROPPING IDENTIFIERS\n",
     "    #_______________________________\n",
     "    \n",
-    "    df.drop(columns=['Id', 'idhogar'], inplace=True)\n",
+    "#     df.drop(columns=['Id', 'idhogar'], inplace=True)\n",
     "\n",
     "    \n",
     "    return df"
@@ -3198,14 +3198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9557, 136)\n",
+      "(9557, 138)\n",
       "0\n"
      ]
     },
@@ -3230,6 +3230,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Id</th>\n",
        "      <th>hacdor</th>\n",
        "      <th>rooms</th>\n",
        "      <th>hacapo</th>\n",
@@ -3322,6 +3323,7 @@
        "      <th>parentesco10</th>\n",
        "      <th>parentesco11</th>\n",
        "      <th>parentesco12</th>\n",
+       "      <th>idhogar</th>\n",
        "      <th>hogar_nin</th>\n",
        "      <th>hogar_adul</th>\n",
        "      <th>hogar_mayor</th>\n",
@@ -3371,6 +3373,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>ID_279628684</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -3463,6 +3466,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>21eb7fcc1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -3510,6 +3514,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>ID_f29eb3ddd</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
@@ -3602,6 +3607,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0e5d7a658</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -3649,6 +3655,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>ID_68de51c94</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
@@ -3741,6 +3748,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>2c7317ea8</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -3788,6 +3796,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>ID_d671db89c</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
@@ -3880,6 +3889,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>2b58d945f</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -3927,6 +3937,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>ID_d56d6f5f5</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
@@ -4019,6 +4030,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>2b58d945f</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -4069,19 +4081,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   hacdor  rooms  hacapo  v14a  refrig  v18q  v18q1  r4h1  r4h2  r4h3  r4m1  \\\n",
-       "0       0      3       0     1       1     0    0.0     0     1     1     0   \n",
-       "1       0      4       0     1       1     1    1.0     0     1     1     0   \n",
-       "2       0      8       0     1       1     0    0.0     0     0     0     0   \n",
-       "3       0      5       0     1       1     1    1.0     0     2     2     1   \n",
-       "4       0      5       0     1       1     1    1.0     0     2     2     1   \n",
+       "             Id  hacdor  rooms  hacapo  v14a  refrig  v18q  v18q1  r4h1  r4h2  \\\n",
+       "0  ID_279628684       0      3       0     1       1     0    0.0     0     1   \n",
+       "1  ID_f29eb3ddd       0      4       0     1       1     1    1.0     0     1   \n",
+       "2  ID_68de51c94       0      8       0     1       1     0    0.0     0     0   \n",
+       "3  ID_d671db89c       0      5       0     1       1     1    1.0     0     2   \n",
+       "4  ID_d56d6f5f5       0      5       0     1       1     1    1.0     0     2   \n",
        "\n",
-       "   r4m2  r4m3  r4t1  r4t2  r4t3  tamhog  tamviv  escolari  hhsize  \\\n",
-       "0     0     0     0     1     1       1       1        10       1   \n",
-       "1     0     0     0     1     1       1       1        12       1   \n",
-       "2     1     1     0     1     1       1       1        11       1   \n",
-       "3     1     2     1     3     4       4       4         9       4   \n",
-       "4     1     2     1     3     4       4       4        11       4   \n",
+       "   r4h3  r4m1  r4m2  r4m3  r4t1  r4t2  r4t3  tamhog  tamviv  escolari  hhsize  \\\n",
+       "0     1     0     0     0     0     1     1       1       1        10       1   \n",
+       "1     1     0     0     0     0     1     1       1       1        12       1   \n",
+       "2     0     0     1     1     0     1     1       1       1        11       1   \n",
+       "3     2     1     1     2     1     3     4       4       4         9       4   \n",
+       "4     2     1     1     2     1     3     4       4       4        11       4   \n",
        "\n",
        "   paredblolad  paredzocalo  paredpreb  pareddes  paredmad  paredzinc  \\\n",
        "0            1            0          0         0         0          0   \n",
@@ -4167,63 +4179,63 @@
        "3            0            0             0             0             0   \n",
        "4            0            0             0             0             0   \n",
        "\n",
-       "   hogar_nin  hogar_adul  hogar_mayor  hogar_total  meaneduc  instlevel1  \\\n",
-       "0          0           1            0            1      10.0           0   \n",
-       "1          0           1            1            1      12.0           0   \n",
-       "2          0           1            1            1      11.0           0   \n",
-       "3          2           2            0            4      11.0           0   \n",
-       "4          2           2            0            4      11.0           0   \n",
+       "     idhogar  hogar_nin  hogar_adul  hogar_mayor  hogar_total  meaneduc  \\\n",
+       "0  21eb7fcc1          0           1            0            1      10.0   \n",
+       "1  0e5d7a658          0           1            1            1      12.0   \n",
+       "2  2c7317ea8          0           1            1            1      11.0   \n",
+       "3  2b58d945f          2           2            0            4      11.0   \n",
+       "4  2b58d945f          2           2            0            4      11.0   \n",
        "\n",
-       "   instlevel2  instlevel3  instlevel4  instlevel5  instlevel6  instlevel7  \\\n",
-       "0           0           0           1           0           0           0   \n",
+       "   instlevel1  instlevel2  instlevel3  instlevel4  instlevel5  instlevel6  \\\n",
+       "0           0           0           0           1           0           0   \n",
        "1           0           0           0           0           0           0   \n",
-       "2           0           0           0           1           0           0   \n",
-       "3           0           0           1           0           0           0   \n",
-       "4           0           0           0           1           0           0   \n",
+       "2           0           0           0           0           1           0   \n",
+       "3           0           0           0           1           0           0   \n",
+       "4           0           0           0           0           1           0   \n",
        "\n",
-       "   instlevel8  instlevel9  bedrooms  overcrowding  tipovivi1  tipovivi2  \\\n",
-       "0           0           0         1      1.000000          0          0   \n",
-       "1           1           0         1      1.000000          0          0   \n",
-       "2           0           0         2      0.500000          1          0   \n",
-       "3           0           0         3      1.333333          0          0   \n",
-       "4           0           0         3      1.333333          0          0   \n",
+       "   instlevel7  instlevel8  instlevel9  bedrooms  overcrowding  tipovivi1  \\\n",
+       "0           0           0           0         1      1.000000          0   \n",
+       "1           0           1           0         1      1.000000          0   \n",
+       "2           0           0           0         2      0.500000          1   \n",
+       "3           0           0           0         3      1.333333          0   \n",
+       "4           0           0           0         3      1.333333          0   \n",
        "\n",
-       "   tipovivi3  tipovivi4  tipovivi5  computer  television  mobilephone  \\\n",
-       "0          1          0          0         0           0            1   \n",
-       "1          1          0          0         0           0            1   \n",
-       "2          0          0          0         0           0            0   \n",
-       "3          1          0          0         0           0            1   \n",
-       "4          1          0          0         0           0            1   \n",
+       "   tipovivi2  tipovivi3  tipovivi4  tipovivi5  computer  television  \\\n",
+       "0          0          1          0          0         0           0   \n",
+       "1          0          1          0          0         0           0   \n",
+       "2          0          0          0          0         0           0   \n",
+       "3          0          1          0          0         0           0   \n",
+       "4          0          1          0          0         0           0   \n",
        "\n",
-       "   qmobilephone  lugar1  lugar2  lugar3  lugar4  lugar5  lugar6  area1  area2  \\\n",
-       "0             1       1       0       0       0       0       0      1      0   \n",
-       "1             1       1       0       0       0       0       0      1      0   \n",
-       "2             0       1       0       0       0       0       0      1      0   \n",
-       "3             3       1       0       0       0       0       0      1      0   \n",
-       "4             3       1       0       0       0       0       0      1      0   \n",
+       "   mobilephone  qmobilephone  lugar1  lugar2  lugar3  lugar4  lugar5  lugar6  \\\n",
+       "0            1             1       1       0       0       0       0       0   \n",
+       "1            1             1       1       0       0       0       0       0   \n",
+       "2            0             0       1       0       0       0       0       0   \n",
+       "3            1             3       1       0       0       0       0       0   \n",
+       "4            1             3       1       0       0       0       0       0   \n",
        "\n",
-       "   age  SQBescolari  SQBage  SQBhogar_total  SQBedjefe  SQBhogar_nin  \\\n",
-       "0   43          100    1849               1        100             0   \n",
-       "1   67          144    4489               1        144             0   \n",
-       "2   92          121    8464               1          0             0   \n",
-       "3   17           81     289              16        121             4   \n",
-       "4   37          121    1369              16        121             4   \n",
+       "   area1  area2  age  SQBescolari  SQBage  SQBhogar_total  SQBedjefe  \\\n",
+       "0      1      0   43          100    1849               1        100   \n",
+       "1      1      0   67          144    4489               1        144   \n",
+       "2      1      0   92          121    8464               1          0   \n",
+       "3      1      0   17           81     289              16        121   \n",
+       "4      1      0   37          121    1369              16        121   \n",
        "\n",
-       "   SQBovercrowding  SQBdependency  SQBmeaned  agesq  Target  \n",
-       "0         1.000000            0.0      100.0   1849       4  \n",
-       "1         1.000000           64.0      144.0   4489       4  \n",
-       "2         0.250000           64.0      121.0   8464       4  \n",
-       "3         1.777778            1.0      121.0    289       4  \n",
-       "4         1.777778            1.0      121.0   1369       4  "
+       "   SQBhogar_nin  SQBovercrowding  SQBdependency  SQBmeaned  agesq  Target  \n",
+       "0             0         1.000000            0.0      100.0   1849       4  \n",
+       "1             0         1.000000           64.0      144.0   4489       4  \n",
+       "2             0         0.250000           64.0      121.0   8464       4  \n",
+       "3             4         1.777778            1.0      121.0    289       4  \n",
+       "4             4         1.777778            1.0      121.0   1369       4  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = dataframe_generator()\n",
+    "df = dataframe_generator('train.csv')\n",
     "print(df.shape)\n",
     "print(df.isna().sum().sum())\n",
     "df.head()"
@@ -4231,7 +4243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
