--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setting up new dataframe (including rent data)\n",
-    "df_rent = dataframe_generator(rent=True)"
+    "df_rent = dataframe_generator('train.csv', rent=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -123,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rent Prediction Function\n",
-    "def dataframe_generator_rent():\n",
+    "def dataframe_generator_rent(data):\n",
     "    \n",
     "    #_______________________________\n",
     "    # DATAFRAME SETUP\n",
     "    #_______________________________\n",
     "    \n",
     "    # Setting up new dataframe (including rent data)\n",
-    "    df_rent = dataframe_generator(rent=True)\n",
+    "    df_rent = dataframe_generator(data, rent=True)\n",
     "    \n",
     "    # Remove missing values for target (rent)\n",
     "    df_rent_predict = df_rent.dropna()\n",
@@ -146,7 +146,7 @@
     "    #_______________________________\n",
     "    \n",
     "    # Partition explanatory and response variables\n",
-    "    X = df_rent_predict.drop(columns='v2a1')\n",
+    "    X = df_rent_predict.drop(columns=['v2a1', 'Id', 'idhogar'])\n",
     "    y = df_rent_predict['v2a1']\n",
     "\n",
     "    # Split into training and test data\n",
@@ -177,7 +177,7 @@
     "    df_rent_nan = df_rent[df_rent.v2a1.isna()]\n",
     "    \n",
     "    # Predict using model\n",
-    "    rent_pred = clf.predict(df_rent_nan.drop(columns='v2a1'))\n",
+    "    rent_pred = clf.predict(df_rent_nan.drop(columns=['v2a1', 'Id', 'idhogar']))\n",
     "    \n",
     "    # Fill NaN\n",
     "    df_rent_nan['v2a1'] = pd.DataFrame(rent_pred).values\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +209,12 @@
     }
    ],
    "source": [
-    "df_rent = dataframe_generator_rent()"
+    "df_rent = dataframe_generator_rent('train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -277,31 +277,29 @@
     {
      "data": {
       "text/plain": [
-       "[['age',\n",
-       "  'LOG_SQBedjefe',\n",
-       "  'LOG_age',\n",
-       "  'LOG_v2a1',\n",
-       "  'qmobilephone',\n",
-       "  'SQ_age',\n",
-       "  'LOG_SQBdependency',\n",
-       "  'LOG_rooms',\n",
+       "[['SQBedjefe',\n",
        "  'SQ_SQBedjefe',\n",
-       "  'meaneduc',\n",
-       "  'SQ_rooms',\n",
-       "  'SQ_qmobilephone',\n",
+       "  'LOG_meaneduc',\n",
+       "  'v2a1',\n",
        "  'LOG_overcrowding',\n",
-       "  'overcrowding',\n",
-       "  'SQ_meaneduc',\n",
-       "  'SQ_SQBdependency',\n",
-       "  'SQBedjefe',\n",
+       "  'LOG_v2a1',\n",
+       "  'LOG_rooms',\n",
+       "  'LOG_SQBdependency',\n",
+       "  'rooms',\n",
+       "  'SQ_qmobilephone',\n",
+       "  'SQ_v2a1',\n",
+       "  'LOG_age',\n",
+       "  'meaneduc',\n",
+       "  'age',\n",
+       "  'SQ_age',\n",
        "  'SQBdependency',\n",
-       "  'LOG_meaneduc'],\n",
-       " 19,\n",
-       " 0.9095188284518828,\n",
-       " 0.8669314133330484]"
+       "  'SQ_SQBdependency'],\n",
+       " 17,\n",
+       " 0.9100418410041841,\n",
+       " 0.8665894529811344]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +339,7 @@
     "                df_test[col] = df_rent[col]\n",
     "            \n",
     "        # Run model in Random Forest\n",
-    "        X = df_test.drop(columns='Target')\n",
+    "        X = df_test.drop(columns=['Target', 'Id', 'idhogar'])\n",
     "        y = df_test['Target']\n",
     "        \n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify=y, random_state=12345)\n",
@@ -364,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,60 +440,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "winner = \\\n",
-    "[['SQ_SQBedjefe',\n",
-    "  'LOG_qmobilephone',\n",
-    "  'SQ_v2a1',\n",
-    "  'SQBdependency',\n",
-    "  'SQBedjefe',\n",
-    "  'meaneduc',\n",
-    "  'qmobilephone',\n",
-    "  'rooms',\n",
-    "  'LOG_meaneduc',\n",
-    "  'SQ_qmobilephone',\n",
-    "  'v2a1',\n",
-    "  'SQ_overcrowding',\n",
-    "  'LOG_SQBdependency'],\n",
-    " 13,\n",
-    " 0.9257322175732218,\n",
-    " 0.8887133182436542]"
+    "# Transformed DataFrame Generator\n",
+    "def dataframe_generator_trans(data):\n",
+    "    \n",
+    "    # Top Features\n",
+    "    top_features = ['v2a1', 'meaneduc', 'SQBedjefe', 'overcrowding', 'SQBdependency', 'age', 'rooms', 'qmobilephone']\n",
+    "\n",
+    "    # Best subset\n",
+    "    winner = \\\n",
+    "            [['SQ_SQBedjefe',\n",
+    "              'LOG_qmobilephone',\n",
+    "              'SQ_v2a1',\n",
+    "              'SQBdependency',\n",
+    "              'SQBedjefe',\n",
+    "              'meaneduc',\n",
+    "              'qmobilephone',\n",
+    "              'rooms',\n",
+    "              'LOG_meaneduc',\n",
+    "              'SQ_qmobilephone',\n",
+    "              'v2a1',\n",
+    "              'SQ_overcrowding',\n",
+    "              'LOG_SQBdependency'],\n",
+    "             13,\n",
+    "             0.9257322175732218,\n",
+    "             0.8887133182436542]\n",
+    "            \n",
+    "    # Create rent-inclusive dataframe\n",
+    "    df_rent = dataframe_generator_rent(data)\n",
+    "    \n",
+    "    # Create transformed dataframe\n",
+    "    df_trans = df_rent.copy(deep=True)\n",
+    "    df_trans.drop(columns=top_features, inplace=True)\n",
+    "\n",
+    "    for feature in winner[0]:\n",
+    "        if \"SQ_\" in feature:\n",
+    "            col = feature.split(\"SQ_\")[1]\n",
+    "            df_trans[feature] = df_rent[col] ** 2\n",
+    "\n",
+    "        elif \"LOG_\" in feature:\n",
+    "            col = feature.split(\"LOG_\")[1]\n",
+    "            df_trans[feature] = df_rent[col].apply(lambda x: np.log(x) if x!=0 else x)\n",
+    "\n",
+    "        else:\n",
+    "            col = feature\n",
+    "            df_trans[feature] = df_rent[col]\n",
+    "            \n",
+    "    return df_trans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nemosaic/.local/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add columns to dataframe\n",
-    "\n",
-    "df_trans = df_rent.copy(deep=True)\n",
-    "df_trans.drop(columns=top_features, inplace=True)\n",
-    "\n",
-    "for feature in winner[0]:\n",
-    "    if \"SQ_\" in feature:\n",
-    "        col = feature.split(\"SQ_\")[1]\n",
-    "        df_trans[feature] = df_rent[col] ** 2\n",
-    "\n",
-    "    elif \"LOG_\" in feature:\n",
-    "        col = feature.split(\"LOG_\")[1]\n",
-    "        df_trans[feature] = df_rent[col].apply(lambda x: np.log(x) if x!=0 else x)\n",
-    "\n",
-    "    else:\n",
-    "        col = feature\n",
-    "        df_trans[feature] = df_rent[col]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_trans = dataframe_generator_trans(\"train.csv\")\n",
     "df_trans.to_pickle(\"df_trans.pkl\")"
    ]
   }
