Finishing up final report.

--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -75,7 +75,7 @@
     "We decided to use regression models to predict **rent** as an approach to filling missing values to increase our power in predicting **poverty level**.  \n",
     "\n",
     "\n",
-    "After testing with tree-style classifiers (Random Forrest, XGBoost) and linear models (Linear Regression, RidgeCV, LassoCV, ElasticNetCV), we found that XGBoost gave the highest scores in predicting rent."
+    "After testing with tree-style classifiers (Random Forrest, XGBoost) and linear models (Linear Regression, RidgeCV, LassoCV, ElasticNetCV), we found that **Random Forest Regression** gave the highest scores in predicting rent."
    ]
   },
   {
@@ -225,14 +225,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will take random subsets of the top 8 variables, along with their square and log transformations and see if any result in better scoring. "
+    "# Transformations\n",
+    "\n",
+    "We will take random subsets of the top 8 variables (determined from classification on full model without rent), along with their square and log transformations and see if any result in better scoring. "
    ]
   },
   {
@@ -313,7 +308,7 @@
     "\n",
     "# Iterate to find best feature subset and subset size\n",
     "print(\"Currently running best_subset simulations of sample size:\")\n",
-    "for size in range(8, 21):\n",
+    "for size in range(8, 25):\n",
     "    print(size)\n",
     "    for run in range(10): # Scale up to 100, 1000, 10000, etc depending on computational power\n",
     "        \n",
