--- a/05_Kaggle_Kernal_Final.ipynb
+++ b/05_Kaggle_Kernal_Final.ipynb
@@ -1361,7 +1361,7 @@
     "# Google Colab Approach\n",
     "# df_rent = pd.read_csv(io.BytesIO(trainUpload['train.csv']))\n",
     "\n",
-    "df = dataframe_generator_rent(\"train.csv\")\n",
+    "df = dataframe_generator_trans(\"../input/train.csv\")\n",
     "df.head()"
    ]
   },
@@ -1441,26 +1441,17 @@
    },
    "outputs": [],
    "source": [
-    "# best_random = RandomForestClassifier(bootstrap=False, max_depth=50, max_features='auto', min_samples_leaf=1, min_samples_split=2, n_estimators=1000)\n",
+    "# # best_random = RandomForestClassifier(bootstrap=False, max_depth=50, max_features='auto', \n",
+    "# #                                      min_samples_leaf=1, min_samples_split=2, n_estimators=1000)\n",
     "\n",
-    "# best_random = RandomForestClassifier({'bootstrap': False,\n",
-    "#  'max_depth': 50,\n",
-    "#  'max_features': 'auto',\n",
-    "#  'min_samples_leaf': 1,\n",
-    "#  'min_samples_split': 2,\n",
-    "#  'n_estimators': 1000})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "4q1pZwHsMCs7"
-   },
-   "outputs": [],
-   "source": [
+    "# best_random = RandomForestClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
+    "#             max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
+    "#             min_impurity_decrease=0.0, min_impurity_split=None,\n",
+    "#             min_samples_leaf=1, min_samples_split=2,\n",
+    "#             min_weight_fraction_leaf=0.0, n_estimators=400, n_jobs=None,\n",
+    "#             oob_score=False, random_state=None, verbose=0,\n",
+    "#             warm_start=False)\n",
+    "\n",
     "# best_random.fit(X_trim_train,y)"
    ]
   },
@@ -1490,40 +1481,8 @@
     "                       min_samples_leaf=1, min_samples_split=2,\n",
     "                       min_weight_fraction_leaf=0.0, n_estimators=300,\n",
     "                       n_jobs=None, oob_score=False, random_state=None,\n",
-    "                       verbose=0, warm_start=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 156
-    },
-    "colab_type": "code",
-    "id": "NB55H_W0hp-S",
-    "outputId": "072d9938-df9a-41fe-e957-776c93a028ba"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
-       "            max_depth=50, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=300, n_jobs=None,\n",
-       "            oob_score=False, random_state=None, verbose=0,\n",
-       "            warm_start=False)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "                       verbose=0, warm_start=False)\n",
+    "\n",
     "best_grid_search.fit(X, y)"
    ]
   },
@@ -2588,7 +2547,7 @@
     "# Google Colab Approach\n",
     "# df_test = pd.read_csv(io.BytesIO(testUpload['test.csv']))\n",
     "\n",
-    "df_test = dataframe_generator_rent(\"test.csv\")\n",
+    "df_test = dataframe_generator_trans(\"../input/test.csv\")\n",
     "df_test.head()"
    ]
   },
@@ -2618,6 +2577,7 @@
    "outputs": [],
    "source": [
     "# GridSearch\n",
+    "# Target = best_random.predict(X_test)\n",
     "Target = best_grid_search.predict(X_test)"
    ]
   },
@@ -2721,7 +2681,7 @@
    ],
    "source": [
     "Target = pd.Series(Target)\n",
-    "Target"
+    "Target.head(10)"
    ]
   },
   {
@@ -3172,7 +3132,7 @@
     }
    ],
    "source": [
-    "kaggle_submit"
+    "kaggle_submit.to_csv(\"submission.csv\", index=False)"
    ]
   }
  ],
