--- a/FINAL_REPORT.ipynb
+++ b/FINAL_REPORT.ipynb
@@ -7267,14 +7267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"nema_score.png\">"
+    "<img src=\"scores_nema.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"david_score.png\">"
+    "<img src=\"scores_david.png\">"
    ]
   },
   {
