--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
     "    # print(clf.score(X_test, y_test))\n",
     "    \n",
     "    # Random Forest\n",
-    "    clf = RandomForestRegressor()\n",
+    "    clf = RandomForestRegressor(n_estimators=10)\n",
     "    clf.fit(X_train, y_train)\n",
     "    # print(clf.score(X_test, y_test))\n",
     "    \n",
@@ -191,15 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nemosaic/.local/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "/usr/lib/python3/dist-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -266,35 +264,36 @@
       "17\n",
       "18\n",
       "19\n",
-      "20\n"
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['SQBedjefe',\n",
-       "  'SQ_SQBedjefe',\n",
-       "  'LOG_meaneduc',\n",
-       "  'v2a1',\n",
-       "  'LOG_overcrowding',\n",
-       "  'LOG_v2a1',\n",
-       "  'LOG_rooms',\n",
-       "  'LOG_SQBdependency',\n",
-       "  'rooms',\n",
-       "  'SQ_qmobilephone',\n",
-       "  'SQ_v2a1',\n",
-       "  'LOG_age',\n",
-       "  'meaneduc',\n",
-       "  'age',\n",
+       "[['SQ_SQBdependency',\n",
+       "  'qmobilephone',\n",
        "  'SQ_age',\n",
        "  'SQBdependency',\n",
-       "  'SQ_SQBdependency'],\n",
-       " 17,\n",
-       " 0.9100418410041841,\n",
-       " 0.8665894529811344]"
+       "  'LOG_age',\n",
+       "  'SQ_overcrowding',\n",
+       "  'LOG_rooms',\n",
+       "  'LOG_qmobilephone',\n",
+       "  'v2a1',\n",
+       "  'LOG_meaneduc',\n",
+       "  'age',\n",
+       "  'meaneduc',\n",
+       "  'LOG_SQBedjefe',\n",
+       "  'SQ_rooms'],\n",
+       " 14,\n",
+       " 0.9168410041841004,\n",
+       " 0.8774088441855008]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,15 +488,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nemosaic/.local/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "/usr/lib/python3/dist-packages/ipykernel_launcher.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
