Added contributions and markdown formatting

--- a/FINAL_REPORT.ipynb
+++ b/FINAL_REPORT.ipynb
@@ -5,9 +5,25 @@
    "metadata": {},
    "source": [
     "# Costa Rican Household Poverty Level Prediction\n",
-    "*From Kaggle ([competition link](https://www.kaggle.com/c/costa-rican-household-poverty-prediction))*\n",
-    "  \n",
-    "**By Nema Sobhani & David LaCharite**"
+    "*From Kaggle ([competition link](https://www.kaggle.com/c/costa-rican-household-poverty-prediction))*  \n",
+    "*[GitHub Project Repository](https://github.com/nemasobhani/Kaggle-Costa-Rican-Poverty-Prediction)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Team Members\n",
+    "\n",
+    "**Nema Sobhani & David LaCharite**\n",
+    "\n",
+    "## Contribution\n",
+    "\n",
+    "**Nema**  \n",
+    "Data exploration, visualization, feature engineering, tranformations, and classification. Assembled this final report.\n",
+    "\n",
+    "**David**  \n",
+    "Data exploration, visualization, classification, hyperparameter tuning, and Kaggle submission setup. Assembled final presentation."
    ]
   },
   {
