Added imports for binder.

--- a/FINAL_REPORT.ipynb
+++ b/FINAL_REPORT.ipynb
@@ -44,6 +44,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install pandas\n",
+    "# !pip install sklearn\n",
+    "# !pip install xgboost\n",
+    "# !pip install matplotlib\n",
+    "# !pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 328,
    "metadata": {},
    "outputs": [],
